// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageSubtitle - Snapshots > matches snapshot for h2 element 1`] = `
<h2
  class="text-xl lg:text-2xl text-muted-foreground font-light leading-normal"
>
  H2 subtitle
</h2>
`;

exports[`PageSubtitle - Snapshots > matches snapshot for h5 element 1`] = `
<h5
  class="text-xl lg:text-2xl text-muted-foreground font-light leading-normal"
>
  H5 subtitle
</h5>
`;

exports[`PageSubtitle - Snapshots > matches snapshot for p element 1`] = `
<p
  class="text-xl lg:text-2xl text-muted-foreground font-light leading-normal"
>
  P subtitle
</p>
`;

exports[`PageSubtitle - Snapshots > matches snapshot with complex children 1`] = `
<h2
  class="text-xl lg:text-2xl text-muted-foreground font-light leading-normal"
>
  <span>
    Complex
  </span>
   
  <strong>
    subtitle
  </strong>
   content
</h2>
`;

exports[`PageSubtitle - Snapshots > matches snapshot with custom className 1`] = `
<h2
  class="text-xl lg:text-2xl text-muted-foreground font-light leading-normal custom-subtitle"
>
  Custom subtitle
</h2>
`;

exports[`PageSubtitle - Snapshots > matches snapshot with data-testid prop 1`] = `
<h2
  class="text-xl lg:text-2xl text-muted-foreground font-light leading-normal"
  data-testid="page-subtitle"
>
  Subtitle with test ID
</h2>
`;

exports[`PageSubtitle - Snapshots > matches snapshot with default props 1`] = `
<h2
  class="text-xl lg:text-2xl text-muted-foreground font-light leading-normal"
>
  Test subtitle
</h2>
`;

exports[`PageSubtitle - Snapshots > matches snapshot with id prop 1`] = `
<h2
  class="text-xl lg:text-2xl text-muted-foreground font-light leading-normal"
  id="subtitle-id"
>
  Subtitle with ID
</h2>
`;

exports[`PageSubtitle - Snapshots > matches snapshot with simple content 1`] = `
<h2
  class="text-xl lg:text-2xl text-muted-foreground font-light leading-normal"
>
  Simple subtitle
</h2>
`;

exports[`PageSubtitle - Snapshots > matches snapshot with title prop 1`] = `
<h2
  class="text-xl lg:text-2xl text-muted-foreground font-light leading-normal"
>
  Title prop subtitle
</h2>
`;
